--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -21,7 +21,7 @@
 
         a:hover {
             box-shadow: 0 0 2px rgba(0, 0, 0);
-            border-radius: 6px;
+            border-radius: 8px;
             color: rgb(0, 10, 200);
         }
 
@@ -29,8 +29,9 @@
             margin: 20px auto;
             width: 85%;
             padding: 20px;
-            border-radius: 15px;
-            background-color: silver;
+            border-radius: 8px;
+            background-color: #E5E5E5;
+            border: 1px solid #CECECE;
         }
 
         .circle {
@@ -44,7 +45,7 @@
             text-align: center;
             font-weight: bolder;
             transition: 0.2s;
-            background-color: lightgray;
+            background-color: #CECECE;
         }
 
 
