--- a/Calculatrice.html
+++ b/Calculatrice.html
@@ -46,30 +46,30 @@
         }
 
         .calculatrice input[type="button"].operator {
-            background-color: #007bff;
+            background-color: #005EFF;
             color: white;
         }
 
         .calculatrice input[type="button"].operator:hover {
-            background-color: #006EE5;
+            background-color: #0054E5;
         }
 
         .calculatrice input[type="button"].equal {
-            background-color: #28a745;
+            background-color: #2CA13D;
             color: white;
         }
 
         .calculatrice input[type="button"].equal:hover {
-            background-color: #24963E;
+            background-color: #279036;
         }
 
         .calculatrice input[type="button"].clear {
-            background-color: #dc3545;
+            background-color: #FF2A3B;
             color: white;
         }
 
         .calculatrice input[type="button"].clear:hover {
-            background-color: #C62F3E;
+            background-color: #E52535;
         }
 
         .a {
@@ -83,7 +83,7 @@
         }
 
         .a:hover {
-            color: #4CAF50;
+            color: #28A745;
         }
     </style>
 </head>
