--- a/Couleurs Et Code.html
+++ b/Couleurs Et Code.html
@@ -137,7 +137,7 @@
         }
 
         .color-picker input:hover {
-            border-color: #4CAF50;
+            border-color: #28A745;
         }
 
 
@@ -153,7 +153,7 @@
         }
 
         .color-picker button:hover {
-            border-color: #4CAF50;
+            border-color: #28A745;
         }
 
         .color-list {
@@ -192,7 +192,7 @@
         }
 
         .picked-color-name:hover {
-            box-shadow: 0 0 3px black;
+            border-color: #28A745;
         }
 
         .picked-color button {
@@ -207,8 +207,7 @@
         }
 
         .picked-color button:hover {
-            box-shadow: 0 0 3px black;
-            color: rgba(45, 150, 45);
+            border-color: #28A745;
         }
     </style>
 </head>
