--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         .app-info:hover {
             transform: translateY(-5px);
-            border-color: #4CAF50;
+            border-color: #28A745;
         }
 
         .app-icon img {
@@ -78,7 +78,7 @@
         }
 
         .app-name h1:hover {
-            color: #4CAF50;
+            color: #2CA13D;
         }
     </style>
 </head>
