Add Cs1.6 for low, high and some skins

--- a/index.html
+++ b/index.html
@@ -230,6 +230,15 @@
                     <h1>Synthèse 1</h1>
                 </div>
             </div>
+            <div class="app-info"
+                onclick="window.location.href='https://drive.google.com/file/d/1wTRr_tvE3q9eFCNulK8fOcwVJ1Azfq6l/view?usp=drive_link';">
+                <div class="app-icon">
+                    <img src="cstrike.webp" alt="LogoIYR3" width="100px" height="100px">
+                </div>
+                <div class="app-name">
+                    <h1>Counter-Strike 1.6</h1>
+                </div>
+            </div>
         </div>
     </div>
 </body>
