--- a/index.html
+++ b/index.html
@@ -87,12 +87,12 @@
     <div class="header">
         <h2><span style="color: white;">IYR</span></h2>
         <div class="menu">
-            <a href="index.html">Mon
-                Accueil</a>
-            <a href="Couleurs Et Code.html">Color
-                Et Code Hex</a><br>
-            <a href="Calculatrice.html">Mon
-                Calculatrice</a>
+            <a href="index.html">
+                Home</a>
+            <a href="Couleurs And Code.html">Color
+                And Code Hex</a><br>
+            <a href="Calculator.html">
+                Calculator</a>
         </div>
     </div>
 
