--- a/Couleurs And Code.html
+++ b/Couleurs And Code.html
@@ -20,7 +20,7 @@
 
         .a1:hover,
         .a2:hover {
-            box-shadow: 0 0 2px rgba(0, 0, 0);
+            box-shadow: 0 0 2px rgba(0, 0, 0, 2);
             border-radius: 8px;
             color: rgb(0, 10, 200);
         }
@@ -30,7 +30,6 @@
             width: 60%;
             margin: 20px auto;
             background-color: #E5E5E5;
-            border: 1px solid #CECECE;
             border-radius: 8px;
             padding: 14px;
             font-size: 30px;
@@ -48,7 +47,7 @@
 
         #color-display:hover {
             color: rgba(45, 150, 45);
-            box-shadow: 0 0 3px black;
+            box-shadow: 0 0 2px rgba(0, 0, 0, 2);
         }
 
         .Allcontent {
@@ -58,7 +57,6 @@
             width: 85%;
             border-radius: 8px;
             background-color: #E5E5E5;
-            border: 1px solid #CECECE;
         }
 
         .color-row {
@@ -82,7 +80,7 @@
 
         .color-circle:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 3px black;
+            box-shadow: 0 0 2px rgba(0, 0, 0, 2);
         }
 
         .color-circle-name {
@@ -97,11 +95,9 @@
             margin-top: 10px;
             border-radius: 8px;
             padding: 2px;
-            border: 1px solid #CECECE;
         }
 
         .color-circle-name h1:hover {
-            box-shadow: 0 0 3px black;
             color: rgba(45, 150, 45);
         }
 
@@ -132,8 +128,7 @@
             border-radius: 8px;
             background-color: #ffffff;
             padding: 4px;
-            border: 1px solid #CECECE;
-
+            border: 1px solid #E5E5E5;
         }
 
         .color-picker input:hover {
@@ -147,7 +142,7 @@
             font-size: 20px;
             padding: 8px;
             border-radius: 8px;
-            border: 1px solid #CECECE;
+            border: 1px solid #E5E5E5;
             background-color: #ffffff;
             transition: 0.2s
         }
@@ -187,7 +182,6 @@
             padding: 8px;
             margin: 5px;
             border-radius: 8px;
-            border: 1px solid #CECECE;
             background-color: #ffffff;
         }
 
@@ -201,7 +195,6 @@
             justify-content: center;
             padding: 8px;
             border-radius: 8px;
-            border: 1px solid #CECECE;
             background-color: #ffffff;
             transition: 0.2s;
         }
