--- a/Plus De Couleurs.html
+++ b/Plus De Couleurs.html
@@ -31,7 +31,6 @@
             padding: 20px;
             border-radius: 8px;
             background-color: #E5E5E5;
-            border: 1px solid #CECECE;
         }
 
         .circle {
@@ -48,10 +47,9 @@
             background-color: #CECECE;
         }
 
-
         .circle:hover {
             transform: scale(1.1);
-            box-shadow: 0 0 3px black;
+            box-shadow: 0 0 2px rgba(0, 0, 0, 2);
         }
 
         /* Red Colors */
@@ -909,7 +907,7 @@
         <div class="circle DarkSlateGray">DarkSlateGray</div>
         <div class="circle Black">Black</div>
 
-        <center><a href="Couleurs Et Code.html">Back</a>
+        <center><a href="Couleurs And Code.html">Back</a>
         </center>
     </div>
 
