--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
             width: 60%;
             padding: 20px;
             background-color: #E5E5E5;
-            border: 1px solid #CECECE;
         }
 
         .main-content h1 {
@@ -29,7 +28,6 @@
             width: 90%;
             padding: 20px;
             background-color: #E5E5E5;
-            border: 1px solid #CECECE;
         }
 
         hr {
@@ -53,7 +51,7 @@
         .app-info {
             text-align: center;
             background-color: #ffffff;
-            border: 1px solid #CECECE;
+            border: 1px solid #E5E5E5;
             padding: 6px;
             border-radius: 8px;
             align-items: center;
