--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             margin: 10px;
             cursor: pointer;
             width: 150px;
-            transition: 0.12s ease;
+            transition: 0.14s;
         }
 
         .app-info:hover {
